right whitespace fix

--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 @media only screen and (max-width: 600px) {
     body {
-      margin-right: -140px;
+      margin-right: -175px;
     }
   }
 
